force-app/main/default/objects/Account_plan_2_0__c/Account_plan_2_0__c.object-meta.xml
<CustomObject>
    <description>Object to store new version of account plans</description>
    <label>Account plan 2.0</label>
    <nameField>
        <label>Account plan 2.0 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account plans 2.0</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>