force-app/main/default/objects/Account_plan_2_0__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts &amp; Services</fullName>
            </value>
            <value>
                <fullName>Surface</fullName>
            </value>
            <value>
                <fullName>Tools &amp; Attachments</fullName>
            </value>
            <value>
                <fullName>Underground</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Digital</fullName>
            </value>
            <value>
                <fullName>Digital Solutions Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>