force-app/main/default/objects/Account_plan_2_0__c/fields/Valid_until_date__c.field-meta.xml
<CustomField>
    <fullName>Valid_until_date__c</fullName>
    <label>Valid until date</label>
    <type>Date</type>
</CustomField>